<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/result"
        style="@style/result"
        android:text="@string/btn_0" />

    <TextView
        android:id="@+id/txtoutputResult"
        style="@style/resultString"
        android:layout_above ="@id/name_h1"
        android:text="@string/btn_0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_h1"
        android:layout_above ="@id/liner_action_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/n9"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintEnd_toStartOf="@+id/n10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/n10"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintEnd_toStartOf="@+id/n11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n9"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n11"
            style="@style/text_name"
            android:text="@string/name_l"
            app:layout_constraintEnd_toStartOf="@+id/n12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n10"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n12"
            style="@style/text_name"
            android:text="@string/name_e"
            app:layout_constraintEnd_toStartOf="@+id/n13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n11"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n13"
            style="@style/text_name"
            android:text="@string/name_g"
            app:layout_constraintEnd_toStartOf="@+id/n14"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n12"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n14"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintEnd_toStartOf="@+id/n15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n13"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n15"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintEnd_toStartOf="@+id/n16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n14"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n16"
            style="@style/text_name"
            android:text="@string/name_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n15"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/result"
        android:layout_alignParentBottom="true"
        android:id="@+id/name_bottom">
        <TextView
            android:id="@+id/n1"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintEnd_toStartOf="@+id/n2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/n2"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintEnd_toStartOf="@+id/n3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n1"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n3"
            style="@style/text_name"
            android:text="@string/name_l"
            app:layout_constraintEnd_toStartOf="@+id/n4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n2"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n4"
            style="@style/text_name"
            android:text="@string/name_e"
            app:layout_constraintEnd_toStartOf="@+id/n5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n3"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n5"
            style="@style/text_name"
            android:text="@string/name_g"
            app:layout_constraintEnd_toStartOf="@+id/n6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n4"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n6"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintEnd_toStartOf="@+id/n7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n5"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n7"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintEnd_toStartOf="@+id/n8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n6"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/n8"
            style="@style/text_name"
            android:text="@string/name_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/n7"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/liner_action_v"
        style="@style/line_vertical"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/name_bottom"
        android:layout_alignEnd="@id/result">
        <TextView
            android:id="@+id/txt_division"
            style="@style/btn_action"
            android:text="@string/btn_division" />
        <TextView
            android:id="@+id/txt_multiplication"
            style="@style/btn_action"
            android:text="@string/btn_multiplication" />
        <TextView
            android:id="@+id/txt_minus"
            style="@style/btn_action"
            android:text="@string/btn_minus" />
        <TextView
            android:id="@+id/txt_plus"
            style="@style/btn_action"
            android:text="@string/btn_plus" />
        <TextView
            android:id="@+id/txt_equal"
            style="@style/btn_action"
            android:text="@string/btn_equal" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_v1"
        android:layout_width="wrap_content"
        android:layout_height="340dp"
        android:layout_above="@id/name_bottom"
        android:layout_toStartOf="@id/liner_action_v">
        <TextView
            android:id="@+id/nv1"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintBottom_toTopOf="@+id/nv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv2"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintBottom_toTopOf="@+id/nv3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv1"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv3"
            style="@style/text_name"
            android:text="@string/name_l"
            app:layout_constraintBottom_toTopOf="@+id/nv4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv2"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv4"
            style="@style/text_name"
            android:text="@string/name_e"
            app:layout_constraintBottom_toTopOf="@+id/nv5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv3"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv5"
            style="@style/text_name"
            android:text="@string/name_g"
            app:layout_constraintBottom_toTopOf="@+id/nv6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv4"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv6"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintBottom_toTopOf="@+id/nv7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv5"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv7"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintBottom_toTopOf="@+id/nv8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv6"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv8"
            style="@style/text_name"
            android:text="@string/name_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv7"
            app:layout_constraintVertical_chainStyle="spread" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/horisontal_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/name_bottom"
        android:layout_toStartOf="@id/name_v1"
        android:layout_toEndOf="@id/name_v2">
        <LinearLayout
            android:id="@+id/liner_action_h"
            style="@style/line"
            app:layout_constraintBottom_toTopOf="@+id/liner1"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txt_c"
                style="@style/btn_num"
                android:text="@string/btn_c" />

            <TextView
                android:id="@+id/txt_back"
                style="@style/btn_num"
                android:text="@string/btn_back" />

            <TextView
                android:id="@+id/txt_percent"
                style="@style/btn_num"
                android:text="@string/btn_percent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner1"
            style="@style/line"
            app:layout_constraintBottom_toTopOf="@+id/liner2"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txt07"
                style="@style/btn_num"
                android:text="@string/btn_7" />

            <TextView
                android:id="@+id/txt08"
                style="@style/btn_num"
                android:text="@string/btn_8" />

            <TextView
                android:id="@+id/txt09"
                style="@style/btn_num"
                android:text="@string/btn_9" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner2"
            style="@style/line"
            app:layout_constraintBottom_toTopOf="@+id/liner3"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txt04"
                style="@style/btn_num"
                android:text="@string/btn_4" />

            <TextView
                android:id="@+id/txt05"
                style="@style/btn_num"
                android:text="@string/btn_5" />

            <TextView
                android:id="@+id/txt06"
                style="@style/btn_num"
                android:text="@string/btn_6" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner3"
            style="@style/line"
            app:layout_constraintBottom_toTopOf="@+id/liner4"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txt01"
                style="@style/btn_num"
                android:text="@string/btn_1" />

            <TextView
                android:id="@+id/txt02"
                style="@style/btn_num"
                android:text="@string/btn_2" />

            <TextView
                android:id="@+id/txt03"
                style="@style/btn_num"
                android:text="@string/btn_3" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner4"
            style="@style/line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txt00"
                style="@style/btn_num"
                android:text="@string/btn_0" />

            <TextView
                android:id="@+id/txt_dot"
                style="@style/btn_num_23"
                android:text="@string/txt_dot" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_v2"
        android:layout_width="wrap_content"
        android:layout_height="340dp"
        android:layout_above="@id/name_bottom"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/nv9"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintBottom_toTopOf="@+id/nv10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv10"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintBottom_toTopOf="@+id/nv11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv9"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv11"
            style="@style/text_name"
            android:text="@string/name_e"
            app:layout_constraintBottom_toTopOf="@+id/nv12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv10"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv12"
            style="@style/text_name"
            android:text="@string/name_e"
            app:layout_constraintBottom_toTopOf="@+id/nv13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv11"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv13"
            style="@style/text_name"
            android:text="@string/name_g"
            app:layout_constraintBottom_toTopOf="@+id/nv14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv12"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv14"
            style="@style/text_name"
            android:text="@string/name_o"
            app:layout_constraintBottom_toTopOf="@+id/nv15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv13"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv15"
            style="@style/text_name"
            android:text="@string/name_v"
            app:layout_constraintBottom_toTopOf="@+id/nv16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv14"
            app:layout_constraintVertical_chainStyle="spread" />
        <TextView
            android:id="@+id/nv16"
            style="@style/text_name"
            android:text="@string/name_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nv15"
            app:layout_constraintVertical_chainStyle="spread" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>